# CHEM279_Fall2024_Mattwaseem

./: Python_script.ipynb  converted_to_kJ_per_mol.txt  lennardjonespe-original.cpp  log.txt
.ipynb_checkpoints/: Python_script-checkpoint.ipynb
CHEM279_Final_Project/: .gitignore  CITATION.cff  Dockerfile  README.md  build_image.sh  entrypoint.sh  interactive.sh
CHEM279_Final_Project/app/backend/: CMakeLists.txt
CHEM279_Final_Project/app/backend/include/: spawner3d.h  unused.h  utils.h  water_sim_3d.h
CHEM279_Final_Project/app/backend/src/: water_sim.cpp
CHEM279_Final_Project/app/frontend/: build_backend.sh  index.js  package-lock.json  package.json
CHEM279_Final_Project/app/frontend/public/: BufferGeometryUtils.js  OrbitControls.js  gui_handler.js  index.html  sim_handler.js  style.css  three_handler.js
CHEM279_Final_Project/plothelper/: log_larger_number_parts.txt  plotting.py
homework2/: CMakeLists.txt  README.md
homework2/calculated_output_p1/: 1-output.txt  2-output.txt  3-output.txt
homework2/calculated_output_p2/: 1-output.txt  2-output.txt  3-output.txt
homework2/include/: CartesianGaussian.hpp  Gaussian1D.hpp  InputParser.hpp  Integrator1D.hpp  OverlapIntegral.hpp
homework2/src/: CartesianGaussian.cpp  Gaussian1D.cpp  InputParser.cpp  Integrator1D.cpp  OverlapIntegral.cpp  main.cpp
homework3/: CMakeLists.txt  README.md
homework3/calculated_output/: C2H2_output.txt  C2H4_output.txt  H2_output.txt
homework3/include/: CartesianGaussian.hpp  Hamiltonian.hpp  OverlapMatrix.hpp  basis_function.hpp  molecule.hpp
homework3/src/: CartesianGaussian.cpp  Hamiltonian.cpp  OverlapMatrix.cpp  basis_function.cpp  input_parser.cpp  main.cpp  molecule.cpp
